# sf-info-lib

./: .env  Cargo.toml
.cargo/: config.toml
.sqlx/: query-01b7a9c26ce3a6a582e7d7026780df4c55b26131f9385523e97add92676a1d2f.json  query-068a3d0fb288a7efc4f8e4f4f8eb7b735398374cd4c527309e57b6db01f0b9bd.json  query-377d3b521641322b506f97fadaa78bfa614b5f7c00c822adbe98ddbd1518cfe1.json  query-4b1819dae210e16259115bf7f2d6f1bc134cf81d31d508bc603462bd2fe9072e.json  query-54a5f7b4b248e3ba20ea2fefca0c039a7ca9ed66a836b3b3d7c417cbcebaf72e.json  query-54fe128f7a5c58472e3b133d78c9d6772d84f645a37cdf7447e16c54fa9384c6.json  query-5c75dab8399e090dff669afd8c156430411f8a025e95b56f501e1edd4eee8216.json  query-5d28baf3bc5e162786326f7672dca119c51d45fba305bfcf29697976ff690e77.json  query-5ee58a9205b156643c9b09cef40f4234493038fd1ef4f76803c1bde1d85a7676.json  query-6005cf1de07100337254ff917433d288b2ea64883a80ee53264f2129827f5bd1.json  query-6142c8ef501ac14dfe27dfab6a7c7003f46d53b06994cec4499cc20032581339.json  query-644411939f0919c4a23837d7951c3fdebc74094e5ba52afb79906aec6be848bd.json  query-70884bac804be7e2b505955574908113684bd17d6b8ffa0a1304df2d97ca6475.json  query-785dd70da41c6f0706ed23dc51421276be0052253a846716362effebc6ba0e94.json  query-7abe81bc7776ce0a7c855491ea240bba95fcfe6f38c0d15e4ab3252acb5be5f9.json  query-7c5a9432bb68f8f3c5813a3552ae682e8f934f7002e0993a6d8d807ab5d3e832.json  query-8576bf375a5a39595cd8f63f4ae2be54ff2a402e9059701f418b7606979ac2ac.json  query-88ed5cb6a0149563f0fe0255e7f53d5f9a58b23b95346d94f20e5923a3028998.json  query-8cb9f6f3eb3db92dcd59d40f54c467f65bc00c8ba26f828079c408a00eea00ef.json  query-9232699b3fcd101186b6e0d301637aa99b99348dde199611ea35296e4c493577.json  query-99c50bfec97dc6c797a6280501ca3d24c5e97ebc26fbaa994beff1dcf0ebc6d3.json  query-a1d301b3a37a6bea09fe9f3c6215d7c311e0f10ac13915515a34910566c518ff.json  query-a327e5bd3144f7a05e088966aba1e9fe724ae63da498c30816e4cf1ea9e5d987.json  query-a96b9fafd7a2868a0bdaf5377cf3a7cc6a48e765c859f686d3fd47bc88988c2c.json  query-aaf9145d028fd19a3be601e671d2c5fabad64492adc0f6f65f39610e1c46a71b.json  query-ab221054cf5fc307c04b4cb9e0b468209487e7cd2174def18cd76928484b1587.json  query-b26b6c27cd8b6192d3e12327b0458097cdaf9f23fe24b11513a6c82806c83c90.json  query-b67add82a27729b2421806cbe93e7b7ad199fe50a27bd5183537acda77bc9622.json  query-bc6f071e873efc32ff81f63136b43ff2f5f54c74ef764061e5799cbce3331a06.json  query-bed6e7c58fd1cb1b25c63d64d2c65138fcd9f2897f737938d3300ff259435ce5.json  query-c3bb7de08757cd1d3fb43b30a40e13da2558e8abe0e4e6bb572a8f2be25a320b.json  query-c85f5238a8fc4dabb3d7651579bfebea30b5db22b486a3852f4efa910a97bfd1.json  query-ca65b68473452369d379aeaf3d296c1ed74b4bceddd3aef18f0e7f55a79a509b.json  query-ce5fe9a942b88f5eca2bd379689c5d8219fe2024deeeb4f31acbe4d4bf9c25e5.json  query-ce9eedde9291b5f6dcae98d6b8ef211b4d1cf59b6bb2f2af8e693a947b9606f7.json  query-d8495e2e3f978c4147c0f63b9013136288813169a52df5bde70ea53dcacf2798.json  query-dd664d19a02a4f0593d6e1fce65f3eaecdf5dc003c86a63a009daa34e9ea89d0.json  query-e25cdb3b41c2a65b8ae8b5db487596775d402fc26171ac276c8a379a901e7967.json  query-e9edd905049d9ccb67e47c3b3aedd9f1d9a9130c25dafc14c3bb94fb689037bc.json  query-e9f5e01c9b221b74ccb025c17afd059fd01d57626562a10f34aed23a63b132b0.json  (+7 more)
examples/: compact_ids.rs  import_equipment.rs  memory.rs  optimize_reponses.rs  reencode_others.rs  remove_old.rs  zhof.rs  zhof3.rs
migrations/: 20250524110246_init.sql  20250524110428_equipment.sql  20250531173433_ranks.sql  20250601101547_filter.sql  20250601195542_hof_index.sql  20250601201707_update_guilds.sql  20250612061200_reponse_cmp_2.sql  20250618104914_other_hash.sql  20250812192734_other_versions.sql  20251019172333_equipment_merge.sql  20251019173253_rm_equipment.sql  20251020093311_equipment_bye.sql  20251025191105_slim_info.sql  20260506140016_compact_player_id.sql  20260507203525_no_info_pkey.sql
src/: common.rs  error.rs  lib.rs  types.rs
src/db/: crawling.rs  mfbot.rs  mod.rs  scrapbook.rs  stats.rs  underworld.rs  update.rs
