[package]
name = "sf-info-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
async-once-cell = { version = "0.5", optional = true }
chrono = { version = "0.4", optional = true }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "chrono",
], optional = true }
thiserror = "2.0"
sf-api = { git = "https://github.com/the-marenga/sf-api.git", branch = "other-player-pub", default-features = false, optional = true }
log = { version = "0.4", optional = true }
url = { version = "2.5", optional = true }
tokio = { version = "1.45", optional = true }
fastrand = { version = "2.3", optional = true }
zstd = { version = "0.13.3", optional = true }

[dev-dependencies]
tokio = { version = "1.45", features = ["full"] }
futures = "*"
indicatif = "0.17.11"

[features]
default = ["db"]
db = [
    "dep:async-once-cell",
    "dep:chrono",
    "dep:fastrand",
    "dep:log",
    "dep:sf-api",
    "dep:sqlx",
    "dep:tokio",
    "dep:url",
    "dep:zstd",
]
