[package]
name = "sf-info-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "chrono",
], optional = true }
thiserror = "2.0"
sf-api = { version = "0.4.2", default-features = false, features = ["serde"] }
log = { version = "0.4", optional = true }
url = { version = "2.5", optional = true }
tokio = { version = "1.52", optional = true }
fastrand = { version = "2.4", optional = true }
zstd = { version = "0.13.3", optional = true }
nohash-hasher = { version = "0.2.0", optional = true }

[dev-dependencies]
tokio = { version = "1.52", features = ["full"] }
futures = "0.3"
indicatif = "0.18.4"
sf-api = "0.4.2"
serde_json = "1.0"
flate2 = { version = "1.1.9", default-features = false, features = ["zlib"] }
clap = { version = "4.6.1", features = ["derive"] }

[features]
default = ["db"]
db = [
    "sf-api/sso",
    "dep:serde_json",
    "dep:chrono",
    "dep:fastrand",
    "dep:log",
    "dep:nohash-hasher",
    "dep:sqlx",
    "dep:tokio",
    "dep:url",
    "dep:zstd",
]

[lints.rust]
unsafe_code = "deny"
missing_debug_implementations = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
indexing_slicing = "warn"
unwrap_used = "warn"
expect_used = "warn"
print_stdout = "warn"
print_stderr = "warn"
missing_errors_doc = "allow"
redundant_closure_for_method_calls = "allow"
wildcard_imports = "allow"
too_many_lines = "allow"
field_reassign_with_default = "allow"
match_bool = "allow"
must_use_candidate = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
